tests/snapshots/run_file__match_num_succ_complex.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_num_succ_complex.hvm
---
Lazy mode:

[[5, 5, 0, 0, 0, 6], [5, 5, 0, 0, 0, 6], [5, 5, 0, 0, 0, 6]]

Strict mode:

[[5, 5, 0, 0, 0, 6], [5, 5, 0, 0, 0, 6], [5, 5, 0, 0, 0, 6]]
