tests/snapshots/run_file__match_str.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_str.hvm
---
Lazy mode:
[2, 2, 1, 0, 0, 0]

Strict mode:
[2, 2, 1, 0, 0, 0]
