tests/snapshots/run_file__match_sup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_sup.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_file/match_sup.bend :
[1m- expected:[0m term
[1m- detected:[0m end of input
[0m  7 | [4m[31m [0m
