tests/snapshots/run_file__match_sup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_sup.hvm
---
#a{1 2}
